# booking-service

./: .gitignore  LICENSE  pyproject.toml
app/: .env.template  create_fastapi_app.py  main.py
app/alembic/: env.py
app/core/: config.py
app/core/models/: __init__.py  assets.py  base.py  place.py  place_service_association.py  user.py
app/core/models/mixins/: __init__.py  place.py  soft_delete.py  timestamp.py
app/utils/: __init__.py  secrets.py
